@@ -37,7 +37,7 @@ bonobo-view-frame.[ch]:
 	expose the new ControlFactory and CanvasComponentFactory interfaces.
 
 bonobo-widget.[ch]:
-	Removed bonobo_widget_get_server, redundany BonoboObjectClient variant,
+	Removed bonobo_widget_get_server, redundant BonoboObjectClient variant,
 	use bonobo_widget_get_objref instead.  Removed the subdoc variant.
 	Rename bonobo_widget_get_uih -> bonobo_widget_get_ui_container.
 
