@@ -1,3 +1,8 @@
+2001-12-04  Michael Meeks  <michael@ximian.com>
+
+	* bonobo/bonobo-plug.c (bonobo_plug_expose_event):
+	chain to parent.
+
 2001-12-03  Laszlo Peter  <laca@ireland.sun.com>
 
 	* bonobo/bonobo-plug.c:
